<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/feedFragment">

    <fragment
        android:id="@+id/feedFragment"
        android:name="ru.netology.recipenebook.ui.FeedRecipeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/feed_recipes">
        <action
            android:id="@+id/toRecipeShowCertainFragment"
            app:destination="@id/recipeShowCertainFragment"/>
        <action
            android:id="@+id/toRecipeCreateFragment"
            app:destination="@id/recipeCreateFragment"/>
        <action
            android:id="@+id/toFavoriteShowFragment"
            app:destination="@id/favoriteShowFragment"/>
        <action
            android:id="@+id/toCategoriesFeederFragment"
            app:destination="@id/categoriesFragment" />
    </fragment>

    <fragment
        android:id="@+id/recipeShowCertainFragment"
        android:name="ru.netology.recipenebook.ui.RecipeShowFragment"
        android:label="@string/nav_main_string2"
        tools:layout="@layout/show_certain_recipe">
        <action
            android:id="@+id/toRecipeCreateFragment"
            app:destination="@id/recipeCreateFragment"/>
    </fragment>

    <fragment
        android:id="@+id/recipeCreateFragment"
        android:name="ru.netology.recipenebook.ui.RecipeCreateFragment"
        android:label="@string/nav_main_string3"
        tools:layout="@layout/create_recipe_fragment">
        <action
            android:id="@+id/action_recipeCreateFragment_to_stepNewFragment2"
            app:destination="@id/stepNewFragment" />
    </fragment>
    <action
        android:id="@+id/toStepNewFragment"
        app:destination="@id/stepNewFragment"/>
    <fragment
        android:id="@+id/stepNewFragment"
        android:name="ru.netology.recipenebook.ui.StepNewFragment"
        android:label="@string/nav_main_string4"
        tools:layout="@layout/step_details_edit" />

    <fragment
        android:id="@+id/favoriteShowFragment"
        android:name="ru.netology.recipenebook.ui.RecipeFavoriteShowFragment"
        android:label="@string/favorites"
        tools:layout="@layout/show_favorite">
        <action
            android:id="@+id/favoriteFragmentToFeedFragment"
            app:destination="@id/feedFragment"/>
    </fragment>

    <fragment
        android:id="@+id/categoriesFragment"
        android:name="ru.netology.recipenebook.ui.CategoriesFragment"
        android:label="@string/cuisine_type_dummy"
        tools:layout="@layout/categories_fragment" />

</navigation>