<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_card_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/small_spacing"
    android:paddingBottom="24dp"
    tools:context=".ui.RecipeCreateFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ellipsize="end"
        android:hint="@string/recipe_name_hint"
        android:padding="8dp"
        android:singleLine="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_field_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_spacing"
        android:text="@string/cuisine_type_dummy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Spinner
        android:id="@+id/category_choose"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:gravity="start"
        android:padding="16dp"
        android:singleLine="true"
        android:text="@string/cuisine_type_dummy"
        app:layout_constraintBottom_toBottomOf="@id/text_field_3"
        app:layout_constraintEnd_toStartOf="@id/favoriteButton"
        app:layout_constraintStart_toEndOf="@id/text_field_3"
        app:layout_constraintTop_toTopOf="@id/text_field_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favoriteButton"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/it_is_favorite_button_description"
        app:icon="@drawable/ic_favorites_24dp"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/category_choose"
        app:layout_constraintBottom_toBottomOf="@id/category_choose"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:padding="@dimen/small_spacing"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/new_step_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_field_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_step_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New step"
        app:layout_constraintBottom_toBottomOf="@id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/author" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/steps_list_new"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/author" />


</androidx.constraintlayout.widget.ConstraintLayout>